sonarqube analysis refactoring